src/circuit/parser/netlist/Readnetlist.java
/* Generated By:JavaCC: Do not edit this line. Readnetlist.java */
package circuit.parser.netlist;

import java.io.*;
import java.util.Vector;

import circuit.*;

public class Readnetlist implements ReadnetlistConstants {

  Circuit circuit;
  Vector<String> global;

  private Net getAndOrMakeNet (String name) {
        Net net;
        if (circuit.nets.containsKey(name)) {
                net = circuit.nets.get(name);
        } else {
                net = new Net("Net_"+name);
                circuit.nets.put(name,net);
        }
        return net;
  }

  public Circuit read(boolean excludeGlobals) throws ParseException, FileNotFoundException  {
    circuit = new Circuit();
    global = new Vector<String>();
    Netlist();
    if(excludeGlobals)
    {
            for(String str:global)
            {
              Net gloNet = circuit.nets.get(str);
              System.out.println("global:"+str+", fanout:"+gloNet.sinks.size());
              circuit.nets.remove(str);
              circuit.globalNets.put(str,gloNet);
            }
        }
    return circuit;

  }

  final public void Netlist() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IN:
      case OUT:
      case CLB:
      case GLO:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      Block();
    }
    jj_consume_token(0);
  }

  final public void Block() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IN:
      Input();
      break;
    case OUT:
      Output();
      break;
    case CLB:
      Clb();
      break;
    case GLO:
      Global();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Global() throws ParseException {
   Token name;
    jj_consume_token(GLO);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Id:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      name = jj_consume_token(Id);
                global.add(name.image);
    }
  }

  final public void Input() throws ParseException {
  Token name;
  Token out;
  Input in;
  Net   net;
    jj_consume_token(IN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Id:
      name = jj_consume_token(Id);
      break;
    case Idn:
      name = jj_consume_token(Idn);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(PINLIST);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Id:
      out = jj_consume_token(Id);
      break;
    case OPEN:
      out = jj_consume_token(OPEN);
      break;
    case Idn:
      out = jj_consume_token(Idn);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    //System.out.println("Input gevonden!");
    in = new Input(name.image);

    //Adding the input block.
    if(!circuit.inputs.containsKey(in.name))
        circuit.inputs.put(in.name,in);

    //Setting the pinMap
    if(out.image!="open") {
        net = getAndOrMakeNet(out.image);
        net.addSource(in.output);
    }
  }

  final public void Output() throws ParseException {
  Token name;
  Token in;
  Output out;
  Net net;
    jj_consume_token(OUT);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Id:
      name = jj_consume_token(Id);
      break;
    case Idn:
      name = jj_consume_token(Idn);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(PINLIST);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Id:
      in = jj_consume_token(Id);
      break;
    case OPEN:
      in = jj_consume_token(OPEN);
      break;
    case Idn:
      in = jj_consume_token(Idn);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    //System.out.println("Output gevonden!");
    out = new Output(name.image);

    //Adding the output block.
    if(!circuit.outputs.containsKey(out.name))
        circuit.outputs.put(out.name,out);

    //Setting the pinMap
    if(in.image!="open") {
                net = getAndOrMakeNet(in.image);
                net.addSink(out.input);
    }
  }

  final public void Clb() throws ParseException {
  Token name;
  Token conId;
  Clb clb;
  Net net;
  int i;
    jj_consume_token(CLB);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Id:
      name = jj_consume_token(Id);
      break;
    case Idn:
      name = jj_consume_token(Idn);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    clb = new Clb(name.image,1,4);
    //Adding the CLB.
    if(!circuit.clbs.containsKey(clb.name))
      circuit.clbs.put(clb.name,clb);
    jj_consume_token(PINLIST);
             i = 0;
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPEN:
      case Id:
      case Idn:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Id:
        conId = jj_consume_token(Id);
        break;
      case Idn:
        conId = jj_consume_token(Idn);
        break;
      case OPEN:
        conId = jj_consume_token(OPEN);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
        if (i<4) {
                if(conId.image!="open") {
                        net = getAndOrMakeNet(conId.image);
                        net.addSink(clb.input[i]);
        }
        } else if (i==4) {
                if(conId.image!="open") {
                        net = getAndOrMakeNet(conId.image);
                        //
                        net.addSource(clb.output[0]);
        }
        } else if (i==5) {
                if(conId.image!="open") {
                        net = getAndOrMakeNet(conId.image);
                        net.addSink(clb.clock);
        }
        }
        i++;
    }
    label_4:
    while (true) {
      jj_consume_token(SUBBLOCK);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Id:
        jj_consume_token(Id);
        break;
      case Idn:
        jj_consume_token(Idn);
        break;
      case OPEN:
        jj_consume_token(OPEN);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NUMBER:
          jj_consume_token(NUMBER);
          break;
        case OPEN:
          jj_consume_token(OPEN);
          break;
        case Id:
          jj_consume_token(Id);
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OPEN:
        case Id:
        case NUMBER:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_5;
        }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SUBBLOCK:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_4;
      }
    }

  }

  /** Generated Token Manager. */
  public ReadnetlistTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[14];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x5c0,0x5c0,0x40000,0xc0000,0xe0000,0xc0000,0xe0000,0xc0000,0xe0000,0xe0000,0xe0000,0x160000,0x160000,0x10000,};
   }

  /** Constructor with InputStream. */
  public Readnetlist(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Readnetlist(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ReadnetlistTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Readnetlist(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ReadnetlistTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Readnetlist(ReadnetlistTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ReadnetlistTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[21];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 14; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 21; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
